feat: add layout

--- a/packages/frontend/src/styles/main.css
+++ b/packages/frontend/src/styles/main.css
@@ -2,26 +2,124 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --font-family: "Poppins", sans-serif;
+  --font-feature-settings: "cv02","cv03","cv04","cv11";
+  --surface-a: #ffffff;
+  --surface-b: #f9fafb;
+  --surface-c: #f3f4f6;
+  --surface-d: #e5e7eb;
+  --surface-e: #ffffff;
+  --surface-f: #ffffff;
+  --text-color: #4b5563;
+  --text-color-secondary: #6b7280;
+  --primary-color: #6366f1;
+  --primary-color-text: #ffffff;
+  --surface-0: #ffffff;
+  --surface-50: #f9fafb;
+  --surface-100: #f3f4f6;
+  --surface-200: #e5e7eb;
+  --surface-300: #d1d5db;
+  --surface-400: #9ca3af;
+  --surface-500: #6b7280;
+  --surface-600: #4b5563;
+  --surface-700: #374151;
+  --surface-800: #1f2937;
+  --surface-900: #111827;
+  --gray-50: #f9fafb;
+  --gray-100: #f3f4f6;
+  --gray-200: #e5e7eb;
+  --gray-300: #d1d5db;
+  --gray-400: #9ca3af;
+  --gray-500: #6b7280;
+  --gray-600: #4b5563;
+  --gray-700: #374151;
+  --gray-800: #1f2937;
+  --gray-900: #111827;
+  --content-padding: 1.25rem;
+  --inline-spacing: 0.5rem;
+  --border-radius: 6px;
+  --surface-ground: #f9fafb;
+  --surface-section: #ffffff;
+  --surface-card: #ffffff;
+  --surface-overlay: #ffffff;
+  --surface-border: #dfe7ef;
+  --surface-hover: #f6f9fc;
+  --focus-ring: 0 0 0 0.2rem #c7d2fe;
+  --maskbg: rgba(0, 0, 0, 0.4);
+  --highlight-bg: #eef2ff;
+  --highlight-text-color: #4338ca;
+  --transition-duration: 0.2s;
+
+  --sidebar-shadow: 0px 4px 50px #d9ddfc;
+  --sidebar-border: 1px solid transparent;
+}
+
+.dark {
+  --font-family: "Poppins", sans-serif;
+  --font-feature-settings: "cv02","cv03","cv04","cv11";
+  --surface-a: #0f1522;
+  --surface-b: #0d121d;
+  --surface-c: rgba(255, 255, 255, 0.03);
+  --surface-d: #303643;
+  --surface-e: #0f1522;
+  --surface-f: #0f1522;
+  --text-color: rgba(255, 255, 255, 0.87);
+  --text-color-secondary: rgba(255, 255, 255, 0.6);
+  --primary-color: #818cf8;
+  --primary-color-text: #030712;
+  --surface-0: #0d121d;
+  --surface-50: #0f1522;
+  --surface-100: #111827;
+  --surface-200: #303643;
+  --surface-300: #4f545f;
+  --surface-400: #6e727b;
+  --surface-500: #8d9097;
+  --surface-600: #acaeb3;
+  --surface-700: #cbcccf;
+  --surface-800: #eaeaec;
+  --surface-900: #ffffff;
+  --gray-50: #eaeaec;
+  --gray-100: #cbcccf;
+  --gray-200: #acaeb3;
+  --gray-300: #8d9097;
+  --gray-400: #6e727b;
+  --gray-500: #4f545f;
+  --gray-600: #303643;
+  --gray-700: #111827;
+  --gray-800: #0f1522;
+  --gray-900: #0d121d;
+  --content-padding: 1.25rem;
+  --inline-spacing: 0.5rem;
+  --border-radius: 6px;
+  --surface-ground: #0d121d;
+  --surface-section: #0d121d;
+  --surface-card: #0f1522;
+  --surface-overlay: #0f1522;
+  --surface-border: rgba(255,255,255,.1);
+  --surface-hover: rgba(255,255,255,.03);
+  --focus-ring: 0 0 0 0.2rem rgba(129, 140, 248, 0.2);
+  --maskbg: rgba(0, 0, 0, 0.4);
+  --highlight-bg: rgba(129, 140, 248, 0.16);
+  --highlight-text-color: rgba(255, 255, 255, 0.87);
+  --transition-duration: 0.2s;
+
+  --sidebar-shadow: none;
+  --sidebar-border: 1px solid var(--surface-border);
+}
+
 html {
+  height: 100%;
   font-size: 14px;
 }
 
 body {
-  background: #eff3f8;
-  padding: 1rem;
-}
-
-.card {
-  background: #ffffff;
-  padding: 2rem;
-  border-radius: 10px;
-  margin-bottom: 1rem;
-}
-
-html.dark body {
-  background: #040d19;
-}
-
-html.dark .card {
-  background: #071426;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
+  background-color: var(--surface-ground);
+  color: var(--text-color);
+  font-family: var(--font-family);
+  -webkit-font-smoothing: antialiased;
 }
