--- a/packages/frontend/src/styles/main.css
+++ b/packages/frontend/src/styles/main.css
@@ -11,9 +11,10 @@
   --surface-d: #e5e7eb;
   --surface-e: #ffffff;
   --surface-f: #ffffff;
-  --text-color: #4b5563;
+  --text-color: #374151;
   --text-color-secondary: #6b7280;
   --primary-color: #6366f1;
+  --primary-color: #3b82f6;
   --primary-color-text: #ffffff;
   --surface-0: #ffffff;
   --surface-50: #f9fafb;
@@ -52,6 +53,7 @@
   --transition-duration: 0.2s;
 
   --sidebar-shadow: 0px 4px 50px #d9ddfc;
+  --sidebar-shadow: 0px 4px 50px #d9e9fc;
   --sidebar-border: 1px solid transparent;
 }
 
@@ -67,6 +69,7 @@
   --text-color: rgba(255, 255, 255, 0.87);
   --text-color-secondary: rgba(255, 255, 255, 0.6);
   --primary-color: #818cf8;
+  --primary-color: #93c5fd;
   --primary-color-text: #030712;
   --surface-0: #0d121d;
   --surface-50: #0f1522;
@@ -122,4 +125,8 @@ body {
   color: var(--text-color);
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
+}
+
+button:focus {
+  box-shadow: none !important;
 }
