--- a/packages/frontend/src/styles/_card.scss
+++ b/packages/frontend/src/styles/_card.scss
@@ -1,3 +1,3 @@
 .card {
-  @apply bg-white rounded-md shadow-md p-6 dark:bg-gray-900;
+  @apply bg-white rounded-lg shadow-md p-6 dark:bg-gray-900;
 }
